Plugin to make custom sounds to happen when you miss or hit an attack

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
+displayName=You Missed That One
+author=Student tort / hyppis
 description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+tags=hint,gear,tracker
+plugins=com.YouMissedThatOne.YouMissedThatOnePlugin
