--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
 
-group = 'com.example'
+group = 'com.YouMissedThatOne'
 version = '1.0-SNAPSHOT'
 
 tasks.withType(JavaCompile).configureEach {
