--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=You Missed That One
-author=Student tort / hyppis
+author=ttortt / hyppis
 description=Play sound effects for both hit and miss actions during attacks
 tags=hint,gear,tracker
 plugins=com.YouMissedThatOne.YouMissedThatOnePlugin
